# PIDgin

./: .gitignore  Cargo.toml  Dockerfile  PIDgin.py  ProcessPoolExecutor.ipynb  README.md  Untitled.ipynb  basic_read_file.py  docker-compose.yml  hermit  hermitPlotter.py  hermit_notebook.ipynb  hermit_notebook2.ipynb  pagurus  pagurus.py  pagurus_allProcs  pagurus_cgroup  setup.cfg  setup.py
.github/workflows/: python-package.yml
paguruslib/: __init__.py
paguruslib/plotting/: __init__.py
src/: main.rs  pagurus.rs
web/: charts.html  index.js  package-lock.json  package.json
