[package]
name = "pagurus"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "collectors"
# path = "src/collectors.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
chrono = "0.4.38"
psutil = "3.3.0"
serde_json = "1.0.117"
signal-hook = "0.3.17"
