[metadata]
name = pagurus
version = file: VERSION
author = Nick Tyler
author_email = tylern@lbl.gov
description = A small wrapper for performance analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylern4/pagurus
project_urls =
    Bug Tracker = https://github.com/tylern4/pagurus/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[build-system]
requires = ["setuptools", "wheel"]

[options]
python_requires = >=3.5
scripts =
    pagurus
    hermit
install_requires =
    psutil
    matplotlib
    pandas
